# neuroweave-cortex

./: .gitignore  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  README_CN.md  ROADMAP.md  SECURITY.md  plan.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: architecture.md  benchmark.md  neuro_mapping.md  research.md
examples/: ablation_benchmark.py  ablation_results.json  benchmark_results.json  emergence_demo.py  locomo_eval.py  locomo_llm_eval.py  locomo_llm_results.json  locomo_results.json  locomo_test.py  memory_basic.py  memory_benchmark.py
scripts/: install_sleep_task.ps1  sleep_daemon.py
star_graph/: __init__.py  __main__.py  abstraction.py  anchor.py  async_manager.py  atom_facts.py  autobiography.py  benchmark.py  bm25.py  brain_sphere.py  cascade.py  causal_edges.py  cli.py  cluster_memory.py  cognitive_cache.py  community.py  competition.py  compiler.py  compression.py  config.py  cortex.py  cost_estimator.py  defaults.yaml  domain_router.py  dual_channel.py  edge_budget.py  edge_decay.py  edge_management.py  embedding.py  episodic_memory.py  evolution.py  exact_cache.py  four_layer.py  gate.py  ghost.py  goal_tree.py  graph.py  hippocampus.py  hub.py  index.py  (+50 more)
star_graph/consolidation/: __init__.py
star_graph/contrib/: __init__.py  benchmark.py  mcp_server.py  snapshot.py  streaming.py  symbolic_filter.py
star_graph/cortex_api/: __init__.py
star_graph/embedding_provider/: __init__.py  providers.py
star_graph/extras/: __init__.py  autobiography.py  resonance.py
star_graph/memory_core/: __init__.py
star_graph/retrieval_engine/: __init__.py
tests/: test_abstraction.py  test_abstractive_memory.py  test_anchor.py  test_atom_facts.py  test_autobiography.py  test_bm25.py  test_brain_sphere.py  test_cascade.py  test_causal_edges.py  test_cluster_memory.py  test_cognitive_cache.py  test_cognitive_compiler.py  test_community.py  test_competition.py  test_compiler.py  test_compression.py  test_config_schema.py  test_cortex_hierarchy.py  test_cost_estimator.py  test_domain_router.py  test_edge_budget.py  test_edge_decay.py  test_edge_management.py  test_embedding.py  test_episodic_memory.py  test_evolution.py  test_four_layer.py  test_gate.py  test_ghost.py  test_ghost_intensity.py  test_goal_tree.py  test_graph.py  test_hippocampus.py  test_index.py  test_layers.py  test_logger.py  test_manager_stats.py  test_math_utils.py  test_memory_tier.py  test_metrics.py  (+34 more)
