[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "star-graph-memory"
version = "1.0.6"
description = "Cognitive memory runtime for AI agents. Hippocampal-inspired star graph memory with oscillatory resonance, survival-based decay, multimodal CLIP embeddings, streaming ingestion with backpressure, and 8-phase sleep consolidation."
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "numpy>=1.24.0",
    "PyYAML>=6.0",
    "scikit-learn>=1.3.0",
    "sentence-transformers>=2.2.0",
]

[project.scripts]
sg-sleep = "star_graph.cli:sleep_cmd"
sg-add = "star_graph.cli:add"
sg-query = "star_graph.cli:query"
sg-stats = "star_graph.cli:stats_cmd"

[tool.setuptools.packages.find]
where = ["."]
