[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "neuroweave-cortex"
version = "1.6.0"
description = "NeuroWeave Cortex (NWC) — Graph-first cognitive memory runtime for AI agents. Hippocampal-inspired architecture with domain routing, spreading activation, edge budget management, 4-layer compression, thermal storage, personality modeling, and 8-phase sleep consolidation."
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "numpy>=1.24.0",
    "PyYAML>=6.0",
    "scikit-learn>=1.3.0",
    "sentence-transformers>=2.2.0",
]

[project.scripts]
sg-sleep = "star_graph.cli:sleep_cmd"
sg-add = "star_graph.cli:add"
sg-query = "star_graph.cli:query"
sg-stats = "star_graph.cli:stats_cmd"

[tool.setuptools.packages.find]
where = ["."]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = false
disallow_untyped_defs = true
ignore_missing_imports = true
exclude = [
    "build/",
    "dist/",
    "tests/",
    "examples/",
]
