[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "neuroweave-cortex"
version = "1.0.1"
description = "NeuroWeave Cortex (NWC) — Graph-first cognitive memory runtime for AI agents. Hippocampal-inspired architecture with domain routing, spreading activation, edge budget management, 4-layer compression, thermal storage, personality modeling, and 8-phase sleep consolidation."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Thatgfsj", email = "thatgfsj@users.noreply.github.com"},
]
urls = {repository = "https://github.com/Thatgfsj/neuroweave-cortex"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "numpy>=1.24.0",
    "PyYAML>=6.0",
    "scikit-learn>=1.3.0",
]

[project.optional-dependencies]
embeddings = ["sentence-transformers>=2.2.0"]

[project.scripts]
sg-sleep = "star_graph.cli:sleep_cmd"
sg-add = "star_graph.cli:add"
sg-query = "star_graph.cli:query"
sg-stats = "star_graph.cli:stats_cmd"

[tool.setuptools.packages.find]
where = ["."]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = false
disallow_untyped_defs = true
ignore_missing_imports = true
exclude = [
    "build/",
    "dist/",
    "tests/",
    "examples/",
]
